# Pydantic-Settings

./: .gitignore  LICENSE  README.md  __init__.py  help.py  pyproject.toml  setup.py  testing.py  utils.py
src/PydanticSettings/: cli.py  core.py  testing.py
